# nsys-tui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  inspect_tensor.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: project-sync.yml  publish.yml  security.yml
docs/: README.md  claude-plugin-quickstart.md  claude-plugin.md  cutracer-instruction-analysis.md
docs/agent_skills/: INDEX.md  PRINCIPLES.md  QUICKSTART.md
docs/agent_skills/commands/: agent-guide.md  analyze.md  diff.md  evidence-build.md  evidence_schema.md  mfu.md  root-cause.md  skill.md  skilldoc.md  validate.md
docs/agent_skills/skills/: TEST.md  diff.md  distributed.md  mfu.md  sql.md  triage.md  variance.md
examples/: README.md
examples/example-10-fastvideo-inference/: .gitignore  README.md  download_data.py
examples/example-20-megatron-distca/: README.md  download_data.py
scripts/: build_fixture.py  smoke_test.sh
site/: index.html
skills/analyze/: SKILL.md
skills/analyze/references/: DIFF.md  DISTRIBUTED.md  M1_AUTO.md  M2_COMMS.md  M3_COMPUTE.md  M4_MEMORY.md  M5_NVTX.md  M6_IDLE.md  M7_CUTRACER.md  M8_DIFF.md  MFU.md  PRINCIPLES.md  ROOT_CAUSE.md  (+2 more)
src/nsys_ai/: chat.py  connection.py  diff.py  diff_render.py  diff_tools.py  diff_web.py  evidence_builder.py  fingerprint.py  hardware.py  indexing.py  nvtx_attribution.py  overlap.py  parquet_cache.py  profile.py  prompt_loader.py  region_mfu.py  root_cause_store.py  sql_compat.py  summary.py  tool_dispatch.py  viewer.py  web.py
src/nsys_tui/: __init__.py  __main__.py  profile.py  report.py  viewer.py  web.py
tests/: conftest.py  test_agent.py  test_chat.py  test_cli.py  test_cutracer_installer.py  test_cutracer_parser.py  test_cutracer_planner.py  test_cutracer_runner.py  test_diff.py  test_duckdb_path.py  test_evidence_build.py  test_fingerprint.py  test_integration.py  test_kernel_classifier.py  test_kernel_instances.py  test_kernel_overlap_matrix.py  test_nccl_breakdown.py  test_nvtx_layer_breakdown.py  test_parquet_cache.py  test_profile_health_manifest.py  test_profile_modes.py  test_profile_resolve.py  test_region_mfu.py  test_skill_manifest.py  test_skills.py  test_skills_base.py  test_skills_benchmarks.py  test_sync_cost_analysis.py  test_timeline_web_data.py  test_timeline_web_distca_profile.py  test_tools_profile.py
(+67 files in other folders)
