[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsys-ai"
version = "0.2.1"
description = "Terminal UI for NVIDIA Nsight Systems profiles — timeline viewer, kernel navigator, NVTX hierarchy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]
authors = [
    {name = "GindaChen"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

[project.scripts]
nsys-ai = "nsys_tui.__main__:main"
nsys-tui = "nsys_tui.__main__:main"

[project.optional-dependencies]
ai = ["anthropic>=0.20.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nsys_tui = ["templates/*.html"]

[tool.bandit]
# B110: try_except_pass; B608: param to run(); B404/B603: subprocess in profile.py for nsys export (.nsys-rep→.sqlite), list args only, no shell
skips = ["B110", "B608", "B404", "B603"]
